--- a/css/color.css
+++ b/css/color.css
@@ -36,25 +36,25 @@
         --color_disabled_text: #808080;
         --color_background: #212121;
         --color_background_2: #424242;
-        --color_text: #e8f5e9;
-        --color_header: #000900;
-        --color_header_text: #e8f5e9;
+        --color_text: #f5f5f5;
+        --color_header: #090909;
+        --color_header_text: #f5f5f5;
         --color_header_hover: #373737;
         --color_header_2_hover: #494949;
         --color_header_preview: #757575;
         --color_header_preview_hover: #9e9e9e;
         --color_toolbar: #757575;
         --color_toolbar_hover: #1b1b1b;
-        --color_boader: #e8f5e9;
-        --color_boader_2: #c8e6c9;
+        --color_boader: #f5f5f5;
+        --color_boader_2: #e4e4e4;
         
-        --color_input_text: #e8f5e9;
-        --color_input_boader: #e8f5e9;
+        --color_input_text: #f5f5f5;
+        --color_input_boader: #f5f5f5;
         --color_input_background: #1b1b1b;
-        --color_input_focus: #a5d6a7;
-        --color_input_disabled: #b6c2b7;
+        --color_input_focus: #cfcfcf;
+        --color_input_disabled: #bdbebd;
         
-        --color_scrollbar-track: #fbfffc;
-        --color_separator: #001100;
+        --color_scrollbar-track: #fcfcfc;
+        --color_separator: #111111;
     }
 }
