--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,13 @@ html {
   overscroll-behavior: none;
 }
 body {
+  margin: 0;
+}
+.body {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   color: var(--color-text);
@@ -371,8 +374,10 @@ div.about-external-link img {
   -moz-user-select: none;
   -webkit-user-select: none;
 }
-div.close-about {
-  text-align: end;
+.close-about {
+  /* text-align: end !important; */
+  display: flex;
+  flex-direction: row-reverse;
 }
 div.close-about label {
   display: inline-block;
