--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,11 @@ input#close-about-btn:focus + label {
   transition: 0.5s;
   background-color: var(--color-header-hover);
 }
+.close-about-btn-icon > svg {
+  width: 50px;
+  height: 50px;
+  color: #fff;
+}
 div.about-content {
   text-align: center;
 }
